# EvogameAI

./: .gitignore  CMakeLists.txt  Makefile  PROGRESS.md  README.md  camera.c  camera.h  circle.c  circle.h  claude.md  config.h  debug.c  debug.h  evolution_simulation_plan.md  main.c  main_new.c  rectangle.c  rectangle.h
include/: config.h  creature.h  genome.h  history.h  nn_view.h  settings.h  simulation.h  ui.h  world.h
src/: creature.c  genome.c  history.c  main.c  nn_view.c  settings.c  simulation.c  ui.c  world.c
